# rocks-wal-tailer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_rpm.sh  docker-compose.yml
config/: cluster.xml  keeper.xml
config/ch1/: macros.xml
config/ch2/: macros.xml
config/ch3/: macros.xml
init/: 001-bootstrap.sql
packaging/: rocks-wal-tailer.spec
packaging/sysconfig/: rocks-wal-tailer
packaging/systemd/: rocks-wal-tailer.service  rocks-wal-tailer@.service
packaging/tmpfiles.d/: rocks-wal-tailer.conf
scripts/: rocks-wal-tailer.sh
src/: lib.rs  main.rs
tests/: wal_to_ch.rs
wal_replay/: pyproject.toml  rks_wal_replay.py  rks_wal_replay.spec  test_replayer_integration.py
