[package]
name = "rocks-wal-tailer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.24.0"
clickhouse = { version = "0.13.3", features = ["lz4", "chrono", "rustls-tls"] }
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1"
base64 = "0.22"


[dev-dependencies]
tempfile = "3"
rand = "0.8"
